fix z-index of controls in map widget (must be < 1000)

--- a/content/media/css/site.css
+++ b/content/media/css/site.css
@@ -83,3 +83,7 @@ body {
 .album .container {
   width: 98%;
 }
+
+.olControlPanZoomBar {
+	z-index: 750 !important;
+}
